[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/Assets/Sprites/MainShip/effects/BonusEffects/ActiveBonus/animFrame.png" type="Texture2D" id=1]
[ext_resource path="res://src/actors/Objects/Bonuses/ActiveBonus/BaseBonus/ActiveBaseBonus.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=68]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 270, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 540, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 630, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 810, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 90, 79 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 990, 0, 90, 79 )

[sub_resource type="SpriteFrames" id=67]
animations = [ {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "Border",
"speed": 15.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 40, 39.6667 )

[node name="ActiveBonus" type="Area2D" groups=["ActiveBonus"]]
position = Vector2( -4, 0 )
scale = Vector2( 0.75, 0.75 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )
speed = 200.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2( 5, 4 )
frames = SubResource( 68 )

[node name="Border" type="AnimatedSprite2D" parent="."]
position = Vector2( 11, 3 )
frames = SubResource( 67 )
animation = "Border"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, 3 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 54 )

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2( 4, 3.81611 )
scale = Vector2( 7.54931, 6.51839 )

[connection signal="area_entered" from="." to="." method="_on_Bonus_area_entered"]
[connection signal="viewport_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
